--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -1018,10 +1018,8 @@
                             Alexander Unge, ambassadör matchning<br> 
                        
                             Eventansvariga<br> 
-                            Mari Multamäki, eventansvarig Stockholm<br> 
                             Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
-                            Maria Waldekranz, eventansvarig Stockholm<br> 
-                            Oliva Wideroth, teamledare eventansvariga Stockholm<br>  
+                            Olivia Wideroth, teamledare eventansvariga Stockholm<br>  
                         </p>
                     ]]>
                 </target>
