Addition to list of supporters

--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1035,7 +1035,10 @@
                         
                         <h3>Ett särskilt tack till...</h3>
                         <p>
-                            Alexandra Arvidson,
+                            Comviq som stöttar Kompisbyråns kansli med mobiltelefoner.
+                        </p>
+                        <p>
+                            och Alexandra Arvidson,
                             Carl Lindström,
                             Jessie Moberg,
                             Johanna Nordin,
