--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -965,7 +965,10 @@
                         
                         <h3>A special thanks to...</h3>
                         <p>
-                        Alexandra Arvidson,
+                            Comviq that supports Kompisbyrån's office with cell phones.
+                        </p>
+                        <p>
+                        and Alexandra Arvidson,
                         Carl Lindström,
                         Frida Benno-Hjerpe,
                         Jessie Moberg,
