--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -10,6 +10,10 @@
                 <source>error.active_request</source>
                 <target>You already have an active friend request at Kompisbyrån.</target>
             </trans-unit>
+            <trans-unit id="error.pending_request">
+                <source>error.pending_request</source>
+                <target>Your application is pending. Kompisbyrån is awaiting an email reply from you.</target>
+            </trans-unit>
             <trans-unit id="yes">
                 <source>yes</source>
                 <target>Yes</target>
