--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1090,7 +1090,7 @@
                         <p>
                             <b>Kansli</b><br> 
                             Emma Hammar, grundare och verksamhetsledare, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
-                            Linda Kaplan, operativ ledare, <a href="mailto:linda@kompisbyran.se">linda@kompisbyran.se</a><br>
+                            Linda Kaplan, operativ ledare och verksamhetsutvecklare, <a href="mailto:linda@kompisbyran.se">linda@kompisbyran.se</a><br>
                             Clara Wäppling, projektledare, <a href="mailto:clara@kompisbyran.se">clara@kompisbyran.se</a><br>
                             <br>
                             <b>IT</b><br>
@@ -1106,11 +1106,7 @@
                             Nienke Bakker, Kompisledare Kalmar<br>
                             <br>
                             <b>Ambassadörer</b><br>  
-                            Hedda Grew, ambassadör Linköping<br> 
-                            Gabriella Hernqvist, ambassadör matchning<br> 
-                            Cecilia Holmgren, grundare och ambassadör matchning<br> 
-                            Hanna Magnusson, ambassadör matchning<br> 
-                            Jonas Ouadih, ambassadör Malmö<br> 
+                            Cecilia Holmgren, grundare<br> 
                             Heydar Sheykhali, ambassadör matchning<br>  
                             Jennifer Silander, ambassadör matchning<br> 
                             Alexander Unge, ambassadör matchning<br> 
