--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1040,8 +1040,12 @@
                         <p>
                             och Alexandra Arvidson,
                             Carl Lindström,
+                            Gabriella Hernqvist,
+                            Hanna Magnusson,
+                            Hedda Grew,
                             Jessie Moberg,
                             Johanna Nordin,
+                            Jonas Ouadih,
                             Mikael Öhrén, 
                             Noa Bachner,
                             Sameer Marmary,
