--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1223,7 +1223,35 @@ If you want to, send us an e-mail at matchning@kompisbyran.se and tell us why yo
             </trans-unit>
             <trans-unit id="open.confirm_meeting.already_answered">
                 <source>open.confirm_meeting.already_answered</source>
-                <target> You have already answered this question. If you clicked the wrong button or want to change your reply, please e-mail us at matchning@kompisbyran.se and we will help you out.</target>
+                <target>You have already answered this question. If you clicked the wrong button or want to change your reply, please e-mail us at matchning@kompisbyran.se and we will help you out.</target>
+            </trans-unit>
+            <trans-unit id="meeting_type.unknown">
+                <source>meeting_type.unknown</source>
+                <target>No answer</target>
+            </trans-unit>
+            <trans-unit id="meeting_type.not_yet_met">
+                <source>meeting_type.not_yet_met</source>
+                <target>Not yet</target>
+            </trans-unit>
+            <trans-unit id="meeting_type.met">
+                <source>meeting_type.met</source>
+                <target>Have met</target>
+            </trans-unit>
+            <trans-unit id="meeting_type.will_not_meet">
+                <source>meeting_type.will_not_meet</source>
+                <target>Will not meet</target>
+            </trans-unit>
+            <trans-unit id="open.confirm_meeting.clone.button">
+                <source>open.confirm_meeting.clone.button</source>
+                <target>Matcha om mig</target>
+            </trans-unit>
+            <trans-unit id="open.confirm_meeting.clone.confirm_message">
+                <source>open.confirm_meeting.clone.confirm_message</source>
+                <target>Tack. Vi hör av oss när vi matchat dig med en ny person.</target>
+            </trans-unit>
+            <trans-unit id="open.confirm_meeting.clone.text">
+                <source>open.confirm_meeting.clone.text</source>
+                <target>Om du vill få en ny matchning men vill ändra någon i din anmälan från förra gången loggar du in på %linkStart%din profil%linkEnd% och skickar in en ny förfrågan med de uppdaterade uppgifterna under rubriken "Jag vill träffa en ny person".</target>
             </trans-unit>
         </body>
     </file>
