--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1241,6 +1241,10 @@ If you want to, send us an e-mail at matchning@kompisbyran.se and tell us why yo
                 <source>meeting_type.will_not_meet</source>
                 <target>Will not meet</target>
             </trans-unit>
+            <trans-unit id="open.confirm_meeting.clone.intro">
+                <source>open.confirm_meeting.clone.intro</source>
+                <target>Vill du att vi letar efter en ny matchning till dig? Tryck på knappen.</target>
+            </trans-unit>
             <trans-unit id="open.confirm_meeting.clone.button">
                 <source>open.confirm_meeting.clone.button</source>
                 <target>Matcha om mig</target>
