--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1306,6 +1306,22 @@ Om du vill, maila gärna oss på matchning@kompisbyran.se och berätta varför m
                 <source>meeting_type.will_not_meet</source>
                 <target>Kommer inte att träffas</target>
             </trans-unit>
+            <trans-unit id="role.user">
+                <source>role.user</source>
+                <target>Användare</target>
+            </trans-unit>
+            <trans-unit id="role.municipality_admin">
+                <source>role.municipality_admin</source>
+                <target>Kommunadministratör</target>
+            </trans-unit>
+            <trans-unit id="role.admin">
+                <source>role.admin</source>
+                <target>Administratör</target>
+            </trans-unit>
+            <trans-unit id="role.super_admin">
+                <source>role.super_admin</source>
+                <target>Superadministratör</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
