--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1025,15 +1025,15 @@
                         <p>
                             <strong>Axfoundation</strong> som via initiativet ÖppnaDörren är vår huvudpartner. Syftet med samarbetet 
                             är att med gemensam kraft få ännu fler nya och etablerade svenskar att mötas under enkla, roliga och 
-                            vardagliga möten. Kompisbyråns verksamhet går helt i linje med ÖppnaDörrens övriga initiativ, där alla 
-                            arbetar med att länka samma nya och etablerade svenskar i ett möte på ungefär en timme.
+                            vardagliga möten. Kompisbyråns verksamhet går helt i linje med ÖppnaDörrens övriga initiativ (Invitationsdepartementet, Svenska med baby och Yrkesdörren), där alla 
+                            arbetar med att länka samma nya och etablerade svenskar i ett möte på ungefär en timme. ÖppnaDörren medfinansieras av Europeiska socialfonden. 
                         </p>
                         <p>
                             <strong>Delicato</strong> som är vår huvudsponsor till Fikakompis! Tillsammans vill vi verka för ökad 
                             gemenskap i det svenska samhället genom fika. 
                         </p>
                         <p>
-                            <strong>Startkompis-kommunerna</strong> Nacka, Solna, Tyresö och Vaxholm som valt att samarbeta med oss
+                            <strong>Startkompis-kommunerna</strong> Nacka, Solna och Tyresö har valt att samarbeta med oss
                             för att öka gemenskapen lokalt i kommunerna genom vårt program Startkompis.
                         </p>
                         
