--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -954,8 +954,8 @@
                         <p>
                             <strong>Axfoundation</strong> our main partner through the initiative ÖppnaDörren. The purpose of this 
                              collaboration is to get even more new and established Swedes to meet in easy and fun ways as part of everyday 
-                             life. The work of Kompisbyrån is very well aligned with the rest of the organizations that are part of ÖppnaDörren, 
-                             we all work to create those first meetings between potential new friends.
+                             life. The work of Kompisbyrån is very well aligned with the rest of the organizations that are part of ÖppnaDörren (Invitationsdepartementet, Svenska med baby och Yrkesdörren), 
+                             we all work to create those first meetings between potential new friends. ÖppnaDörren is co-financed by European Social Fund. 
                         </p>
                         <p>
                             <strong>Delicato</strong>, our main sponsor for ”Fikakompis”. Together we want to increase the integration in the Swedish society 
