--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -736,22 +736,20 @@
                             behandlingen av dina personuppgifter begränsas samt få ett utdrag av av de uppgifter som Kompisbyrån har 
                             om dig. Du kan även göra en invändning mot en särskild behandling.Om du vill något av detta kontakta: 
                             kontakt@kompisbyran.se
-                         </li>
-                         <li>
-                             Kompisbyrån bistår dig om du vill få dina personuppgifter hos oss flyttade till en annan tjänst (så 
-                             kallad dataportabilitet) en sådan begäran skickas till kontakt@kompisbyran.se
-                          </li>
-                          <li>
+                        </li>
+                        <li>
+                            Kompisbyrån bistår dig om du vill få dina personuppgifter hos oss flyttade till en annan tjänst (så
+                            kallad dataportabilitet) en sådan begäran skickas till kontakt@kompisbyran.se
+                        </li>
+                        <li>
                             Datainspektionen är tillsynsmyndighet för dessa personuppgiftsbehandlingar och om du anser att de behandlas
-                            felaktigt så har du rätt att lämna klagomål hos dem. Mer information om detta hittar du här: 
-                            https://www.datainspektionen.se/vagledningar/for-dig-som-privatperson/klagomal-och-tips/?_t_id=1B2M2Y8AsgTpgAmY7PhCfg%3d%3d&_t_q=anm%C3%A4la&_t_tags=language%3asv%2csiteid%3a994ba21f-261a-4557-a79f-e3dd826642d2&_t_ip=10.109.50.20&_t_hit.id=Datainspektionen_Web_Features_StandardPage_StandardPageType/_f2206461-c0d3-4dfc-8eca-caada2c4d500_sv&_t_hit.pos=11
-                          </li>
-                          <li>
+                            felaktigt så har du rätt att lämna klagomål hos dem. Mer information om detta hittar du
+                            <a href="https://www.datainspektionen.se/vagledningar/for-dig-som-privatperson/klagomal-och-tips/?_t_id=1B2M2Y8AsgTpgAmY7PhCfg%3d%3d&_t_q=anm%C3%A4la&_t_tags=language%3asv%2csiteid%3a994ba21f-261a-4557-a79f-e3dd826642d2&_t_ip=10.109.50.20&_t_hit.id=Datainspektionen_Web_Features_StandardPage_StandardPageType/_f2206461-c0d3-4dfc-8eca-caada2c4d500_sv&_t_hit.pos=11">här</a>.
+                        </li>
+                        <li>
                              Kompisbyrån lagrar dina personuppgifter tills det att du väljer att ta bort dem eller att ditt konto 
                              varit inaktivt i 36 månader.
-                           </li>
-                             
-                            
+                         </li>
                     </ul>]]></target>
             </trans-unit>
             <trans-unit id="terms.outro">
