Correction of misspellings

--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -741,7 +741,7 @@
                             processing of a certain kind. If you want any of this, please contact: kontakt@kompisbyran.se
                          </li>
                          <li>
-                            Kompisbyrån will help you out if you want your personal data moved yo another service. This is called 
+                            Kompisbyrån will help you out if you want your personal data moved to another service. This is called 
                             data portability and a request like this should be sent to: kontakt@kompisbyran.se
                           </li>
                           <li>
@@ -750,7 +750,7 @@
                             about this <a href="https://www.datainspektionen.se/vagledningar/for-dig-som-privatperson/klagomal-och-tips/?_t_id=1B2M2Y8AsgTpgAmY7PhCfg%3d%3d&_t_q=anm%C3%A4la&_t_tags=language%3asv%2csiteid%3a994ba21f-261a-4557-a79f-e3dd826642d2&_t_ip=10.109.50.20&_t_hit.id=Datainspektionen_Web_Features_StandardPage_StandardPageType/_f2206461-c0d3-4dfc-8eca-caada2c4d500_sv&_t_hit.pos=11">here</a>.
                           </li>
                           <li>
-                             Kompisbyrån store your personal data until you choose to remove it or when your account has been 
+                             Kompisbyrån stores your personal data until you choose to remove it or when your account has been 
                              inactive for 36 months.                           
 		                  </li>
 
